--- a/contactUs/ContactUs.css
+++ b/contactUs/ContactUs.css
@@ -1,14 +1,16 @@
 * {
     margin: 0;
     padding: 0;
-    /* background-color: #f2f4fc; */
     font-family: 'Roboto';
     font-style: normal;
     color: #292e47;
     
     }
+    body {
+        background-color: #f2f4fc;
+    }
     h1{
-        font-size: 60px;
+        font-size: 70px;
         font-weight: 700;
         letter-spacing: 2px;
         line-height: 130%;
@@ -37,33 +39,34 @@
         color: #6B708D;
     }
     .navbar {
-        border: 1px solid black;
+        
         display: flex;
         justify-content: space-around;
         align-content: center;
         align-items: center;
         text-align: center;
         width: 100%;
-        height: 122px;
+        height: auto;
         left: calc(50% - 1440px/2);
-        top: 0px;
+        margin-top:  2%;
     }
     .logoCircle {
-        border: 1px solid black;
-        width: 5%;
+
+        width: 5%; 
         height: auto;
         padding: 0;
     }
     .navigation {
-        border: 1px solid black;
-        width: 30%;
+      
+        width: 60%;
         height: 5vh;
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
+        gap:10%;
         align-items: center;
-        font-size: 20px;
+        font-size: 30px;
         font-family: "Roboto";
-        font-weight: 600;    
+        font-weight: 600;   
     }
     .navigation a:hover {
         font-weight: bolder;
@@ -71,14 +74,15 @@
         
     }
     .contactBtn {   
-        border: 1px solid black;
-        width: 7.6%;
-        height: 4vh;
+     
+        width: 6%;
+        height: 50px;
         background-color:#072AC8;
-        font-size: 17px;
+        font-size: 20px;
         font-family: "Roboto";
         font-weight:bold;
         color: white;
+        border: none;
     }
     .contactuscontainer {
         width: 100%;
@@ -102,8 +106,6 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        /* align-items: left; */
-        /* justify-content: flex-start; */
         margin-top: 3%;
     }
     .label {
@@ -144,22 +146,22 @@
         padding-left: 1rem;
         padding-top: 1.5rem;
     }
-    .submit {
-        width: 100%;
-        height: 120px;
+    .button-contact {
+        width: auto;
+        height: 80px;
         background-color:#072AC8;
         font-size: 20px;
         font-family: "Roboto";
-        font-weight:bold;
         color: white;
         margin-top: 3%;
+        border: none;
     }
     footer {
     
         margin-top: 5%;
         width: 100%;
         display: flex;
-        justify-content:center;
+        justify-content:flex-start;
         margin-left: 30px;
         align-items: center;
     
@@ -171,15 +173,18 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        margin-left: 5%;
     }
     .footercontainer2 img {
         width: 100px;
         margin-bottom: 30px;
         display: flex;
         margin-top: 90px;
-    S}
+    }
+    
     .footercontainer2 p {
         color: #6b708d;
+    
         }
     
     .footercontainer3 {
@@ -201,44 +206,57 @@
         color: #6B708D;
     }
     
+    @media only screen and (min-width: 1024px) and (max-width: 1400px) {
     
     
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    @media screen and (max-width:7767px) {
-    
+    .contactBtn {
+        width: 10%;
     }
+    h1 {
+        font-size: 40px;
+    }
+}
+
+
+
+    @media only screen and (min-width: 768px) and (max-width: 1023px) {
+        .contactBtn {
+            width: 13%;
+        }
+        h1 {
+            font-size: 40px;
+        }
+    }
+
+    @media only screen and (min-width: 600px) and (max-width: 767px) {
+        .contactBtn {
+            width: 16%;
+        }
+        h1 {
+            font-size: 35px;
+        }
+        .logoCircle {
+            width: 8%;
+        }
+        .navigation {
+            font-size: 25px;
+        }
+    
+        .footercontainer2 p{
+        font-size: 15px;
+       } 
+    footer li {
+        font-size: 10px;
+        list-style: none;
+        padding-right: 0.3px;
+        color: #6B708D;
+    }
+    }
+    
+    
+    
+    
+    
+    
+    
+    
