--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
     background-color: #ecf7ff;
 }
 h1{
-    font-size: 100px;
+    font-size: 70px;
     font-weight: 700;
     letter-spacing: 5px;
     line-height: 130%;
@@ -26,15 +26,11 @@ h5 {
     font-weight: 500;
 }
 p {
-    margin-top: 0px;
-    margin-bottom: 10px;
-    font-size: 30px;
-    font-weight: 400;
+    
     color: #6B708D;
 }
 
 .navbar {
-    /* border: 1px solid black; */
     display: flex;
     justify-content: space-around;
     align-content: center;
@@ -43,19 +39,18 @@ p {
     align-self: center;
     width: 100%;
     height: 122px;
-    /* left: calc(50% - 1440px/2); */
     top: 0px;
   
 
 }
 .logoCircle {
-    /* border: 1px solid black; */
-    /* width: 5%; */
+
+    width: 5%; 
     height: auto;
     padding: 0;
 }
 .navigation {
-    /* border: 1px solid black; */
+ 
     width: 60%;
     height: 5vh;
     display: flex;
@@ -75,16 +70,18 @@ p {
 
 }
 .contactBtn {   
-    border: none;
-    height: 5vh;
-    background-color: #072AC8;
-    font-size: 17px;
-    font-family: "Roboto";
-    font-weight:bold;
-    color: white;
-    padding: 0 15px 0 15px;
 
-}
+        width: 6%;
+        height: 50px;
+        background-color:#072AC8;
+        font-size: 20px;
+        font-family: "Roboto";
+        font-weight:bold;
+        color: white;
+        border: none;
+    }
+
+
 .contactBtn:hover {
     cursor:pointer;
 }
@@ -111,9 +108,9 @@ p {
     height: auto;
 }
 
-.empowertexts h1 {
+.empowerTextcontainer h1 {
    color: #292e47;
-   font-size: 5em;
+   font-size: 120px;
    
 }
 .empowerTextcontainer p {
@@ -140,8 +137,8 @@ p {
     color: white;
     border: 0;
     height: 79px;
-    width: 30%;
- 
+    width: 20%;
+
     }
 
 .empowerTextcontainer a {
@@ -464,26 +461,30 @@ p {
 }
 
 .questionstext {
+    
     width: 100%;
     display: flex;
     justify-content: center;
+    height: 15%;
 }
 .formulario {
   
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;  
+    text-align: center;
+    align-items:center;
+    gap:25px;
+    
 }
-.inputbox { 
+.inputbox {   
     
     display: flex;
     justify-content:center;
     background-color: #ecf7ff;
-    margin-right: 50px;
-    margin-bottom: 15%;
     border: none;
-    height: 85px;
+    height: 80%;
+    
 }
 .formulario input {
     
@@ -492,18 +493,20 @@ p {
     font-size:25px;    
 }
 .button {
-    font-size: 50px;
-    margin-bottom: 15%;
-    color: white;
-    align-self: center; 
+    display: flex;
+    justify-content:center;
+    background-color: #ecf7ff;
+    border: none;
+    height: 80%;
+
 }
 .button1 {
+
     background-color: #072AC8;
     border: none;
     color: white;
-    width: 120px;
-    height: 85px;
-    font-size: 20px;
+    font-size: 25px;
+    width: 200px;
 
 } 
 footer {
@@ -560,6 +563,9 @@ footer li {
     body {
         background-color: #ecf7ff;
     }
+    .contactBtn {
+        width: 10%;
+    }
     .SeeOurWork{
         align-self: flex-start;
         }
@@ -611,7 +617,7 @@ footer li {
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
 
 .contactBtn {
-    
+    width: 10%;
     font-size: 20px;   
 }
 .logoCircle {
@@ -624,7 +630,7 @@ footer li {
     font-size: 15px;
 }
 .empowerTextcontainer h1 {
-    font-size: 40px;
+    font-size: 55px;
 }
 .empowerTextcontainer p {
     font-size: 15px;
@@ -647,7 +653,7 @@ h3 {
 }
 .getInTouchBtn{
     align-self: center;
-    width: 35%;
+    width: 40%;
     font-size: 20px;
     height: 40px;
 }
@@ -744,10 +750,11 @@ h3 {
 }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (min-width: 600px) and (max-width: 767px) {
 
     .contactBtn {
-        font-size: 15px;
+        width: 17%;
+        font-size: 20px;   
     }
     .logoCircle {
         width: auto;
@@ -755,7 +762,6 @@ h3 {
     .navigation {
         font-size: 20px;
     }
-   
     .empowerBox {
         width: 90%;
        display: flex;
@@ -817,7 +823,17 @@ h3 {
         align-self: center;
         width: 50%;
         height: auto;
-    
+
+    }
+    .recentboxestext p {
+        font-size: 15px;
+    }
+    .service-container p {
+        font-size: 25px;
+    }
+    .service-container {
+        display: flex;
+        text-align: center;
     }
    
     .central {
@@ -868,7 +884,7 @@ h3 {
         height: auto;
         padding-top: 4%;
 
-    
+
     }
     
     .services{
@@ -917,12 +933,22 @@ h3 {
     .formulario {
         flex-direction: column;
     }
-    footer{
-        max-width: 300px;
+
+    .footercontainer1 {
+        width: 30%;
     }
+    
     .footercontainer2 p {
-        font-size: 20px;
+        font-size: 15px;
+       
     }
+    footer li {
+        font-size: 10px;
+        list-style: none;
+        padding-right: 0.3px;
+        color: #6B708D;
+    }
+    
 }
 
 
