--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ p {
 
 .empowerTextcontainer h1 {
    color: #292e47;
-   font-size: 90px;
+   font-size: 98px;
    
 }
 .empowerTextcontainer p {
@@ -917,10 +917,7 @@ h3 {
     .servicesSection {
         height: auto;
         padding-top: 4%;
-
-
     }
-    
     .services{
       height: auto;
       display: flex;
@@ -934,8 +931,7 @@ h3 {
         flex-direction: column;
         width: 60%;
         justify-content:space-evenly;
-        gap: 30px;
-       
+        gap: 30px;    
     }
     .service-container {
         width: 100%;
@@ -984,6 +980,249 @@ h3 {
     }
     
 }
+@media only screen and (min-width: 400px) and (max-width: 599px) {
+
+    .contactBtn {
+        width: 17%;
+        font-size: 15px;   
+    }
+    .empower-bottom {
+        display: flex;
+        flex-direction: column;
+        gap:20px;
+    }
+
+    .logoCircle {
+        width: auto;
+    }
+    .navigation {
+        font-size: 15px;
+    }
+    .empowerBox {
+    width: 90%;
+    display: flex;
+    flex-direction: column; 
+    
+    }
+    .empowerTextcontainer{
+        height: auto;
+        width:auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+   
+    .empowerTextcontainer h1 {
+        font-size: 40px;
+        align-self: center;
+    }
+    .empowerTextcontainer p {
+        font-size: 20px;
+        align-self: center;
+    }
+    .empowerbuttons {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 6%;
+    }
+    .getInTouchBtn{
+        align-self: center;
+        width: 25%;
+
+    }
+    .empowerImage {
+        position:relative;
+        display: flex;
+        justify-content: center;
+        height: auto;
+        width:auto;
+    }
+    .recenProjectsContainer h3 {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    .recentProjects {
+        display: flex;
+        justify-content: center;
+    }
+    .recentprojectsIn {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        justify-content: center;
+        align-content:flex-start;
+    }
+    .recentBoxes {
+        align-self: center;
+        width: 50%;
+        height: auto;
+
+    }
+    .recentboxestext p {
+        font-size: 15px;
+    }
+    .service-container p {
+        font-size: 15px;
+    }
+    .service-container {
+        display: flex;
+        text-align: center;
+    }
+   
+    .central {
+        width: 60%;
+    }
+   .h3-central{
+    font-size: 25px;
+   } 
+
+    .hearbox {
+        height: auto;
+    }
+    .hear{
+        height: 500px;
+        margin-bottom: -10%;
+    }
+    .lateralizquierdo {
+            left: 10px;
+    }
+    .lateralderecho {
+            left: 20px;
+    }
+    .emojis{
+        width: 90px;
+        height: auto;
+    }
+    
+    #emoji3 {
+        
+        position: initial;
+    }
+    #emoji4 {
+        position: initial;
+    }
+    #emoji1 {
+        position: initial;
+    }
+    #emoji2{
+        position:initial;
+    }
+    .ourservices {
+        margin-top: 3%;
+    }
+    .ourservices h3 {
+        align-self: center;
+    }
+    .servicesSection {
+        height: auto;
+        padding-top: 4%;
+    }
+    .services{
+      height: auto;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+    }
+    .ourservices {
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        width: 60%;
+        justify-content:space-evenly;
+        gap: 15px;    
+    }
+    .ourservices h5 {
+        font-size: 25px;
+    }
+    .service-container {
+        width: 100%;
+        height: 400px;
+        align-self: center;
+    }
+    .icon-1{
+        align-self: center;
+    }
+    .icon-2{
+        align-self: center; 
+    }
+    .icon-3{
+        align-self: center; 
+    }
+    .icon-4{
+        align-self: center; 
+    }
+    .questions {
+        height: 600px;
+        display: flex;
+        justify-content: center;
+    }
+    .questions h5 {
+        font-size: 25px;
+        align-self: center;
+       
+        text-align: center;
+    }
+    .formulario {
+        flex-direction: column;
+    }
+
+    .footercontainer1 {
+        width: 30%;
+    }
+    
+    .footercontainer2 p {
+        font-size: 10px;
+       
+    }
+    footer li {
+        font-size: 10px;
+        list-style: none;
+        padding-right: 0.3px;
+        color: #6B708D;
+    }
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
