--- a/project-page/projectPage.css
+++ b/project-page/projectPage.css
@@ -481,7 +481,7 @@ footer li {
     }
 }
 
-@media only screen and (min-width: 400px) and (max-width: 599px) {
+@media only screen and (max-width: 599px) {
 
     .contactBtn {
         width: 17%;
@@ -543,17 +543,6 @@ footer li {
         height: auto;
     
     }
-
-
-
-
-
-
-
-
-
-
-
     .questions {
         height: 600px;
         display: flex;
