--- a/index.css
+++ b/index.css
@@ -980,7 +980,7 @@ h3 {
     }
     
 }
-@media only screen and (min-width: 400px) and (max-width: 599px) {
+@media only screen and (max-width: 599px) {
 
     .contactBtn {
         width: 17%;
